syntax="proto3";
package addressbook;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
// import "google/api/annotations.proto";

option go_package = "github.com/BRO3886/grpc-go-example/addressbook";

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }

    repeated PhoneNumber phones = 4;

    google.protobuf.Timestamp lastUpdated = 5;
}

message AddressBook {
    repeated Person people = 1;
}

service AddressBookService {
    rpc CreateAddressBook(AddressBook) returns (AddressBook) {
        // option (google.api.http) = {
        //     post: "/v1/addressbooks"
        //     body: "*"
        // };
    }

    rpc AddPerson(stream Person) returns (stream AddressBook);

    rpc GetAddressBook(google.protobuf.Empty) returns (AddressBook);
}